Semantic markups review, aria label and contrasts errors correction

--- a/static/style.css
+++ b/static/style.css
@@ -25,6 +25,10 @@ h1 {
   margin: 0;
 }
 
+p {
+  margin: 0;
+}
+
 .card {
   background-color: var(--cardBG);
   margin: auto;
@@ -145,7 +149,7 @@ h1 {
 }
 
 /* If the screen size is 600px wide or less, set the font-size of <div> to 30px */
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 400px) {
   html, body {
     font-size: 16px;
   }
